src/Flashcard/flashcardParser.js
"use strict";
// Generated from ./Flashcard/flashcardParser.g4 by ANTLR 4.9.0-SNAPSHOT
Object.defineProperty(exports, "__esModule", { value: true });
exports.SpContext = exports.WordsContext = exports.SsplContext = exports.ClnspContext = exports.Bracket_escapedContext = exports.S_and_wContext = exports.LinesContext = exports.DcolonContext = exports.AnchorContext = exports.DollaransContext = exports.Atdef_Context = exports.AtdefContext = exports.IsinfoonlyContext = exports.IstrackedContext = exports.Progress_pointsContext = exports.Bool_labelContext = exports.TitleContext = exports.HintContext = exports.InstructionContext = exports.Dateprop_chainedContext = exports.DatepropContext = exports.ProgressContext = exports.ReferenceContext = exports.Bracketed_textContext = exports.ExampleContext = exports.AnglerefContext = exports.LeadContext = exports.ItemContext = exports.UrlContext = exports.TelephoneContext = exports.Resource_chainedContext = exports.Op_audio_formatContext = exports.Audio_formatContext = exports.Audio_oneContext = exports.AudiobitContext = exports.Image_chained4matchContext = exports.Image_chainedContext = exports.Op_image_formatContext = exports.Image_oneContext = exports.ImagebitContext = exports.Video_oneContext = exports.VideobitContext = exports.Stillimg_oneContext = exports.StillimagefilmbitContext = exports.AppbitContext = exports.WebsitebitContext = exports.DocumentbitContext = exports.ArticlebitContext = exports.Op_stillimagefilm_formatContext = exports.Op_video_formatContext = exports.Op_website_formatContext = exports.Op_app_formatContext = exports.Op_document_formatContext = exports.Op_article_formatContext = exports.Stillimagefilm_formatContext = exports.Website_formatContext = exports.App_formatContext = exports.Document_formatContext = exports.Article_formatContext = exports.Video_formatContext = exports.Image_formatContext = exports.Format2Context = exports.Resource_format_extraContext = exports.Resource_formatContext = exports.FormatContext = exports.AtpointContext = exports.Bullet_itemContext = exports.Single_gapContext = exports.GapContext = exports.ResourceContext = exports.BitElemContext = exports.VsideContext = exports.Side_NLContext = exports.SideContext = exports.Sidex_NLContext = exports.SidexContext = exports.SxContext = exports.Vocab_1Context = exports.VocabContext = exports.Flashcard_language_1Context = exports.Flashcard_language_setContext = exports.Flashcard_setContext = exports.FlashcardContext = exports.Flashcard_1Context = exports.FlashcardsContext = exports.Bitmark_Context = exports.BitmarkContext = exports.flashcardParser = void 0;
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const NoViableAltException_1 = require("antlr4ts/NoViableAltException");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = require("antlr4ts/misc/Utils");
class flashcardParser extends Parser_1.Parser {
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(flashcardParser._ATN, this);
    }
    // @Override
    // @NotNull
    get vocabulary() {
        return flashcardParser.VOCABULARY;
    }
    // tslint:enable:no-trailing-whitespace
    // @Override
    get grammarFileName() { return "flashcardParser.g4"; }
    // @Override
    get ruleNames() { return flashcardParser.ruleNames; }
    // @Override
    get serializedATN() { return flashcardParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new FailedPredicateException_1.FailedPredicateException(this, predicate, message);
    }
    // @RuleVersion(0)
    bitmark() {
        let _localctx = new BitmarkContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, flashcardParser.RULE_bitmark);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 187;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    {
                        {
                            this.state = 174;
                            this.bitmark_();
                            this.state = 184;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
                            while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                                if (_alt === 1) {
                                    {
                                        {
                                            this.state = 178;
                                            this._errHandler.sync(this);
                                            _la = this._input.LA(1);
                                            while (_la === flashcardParser.S) {
                                                {
                                                    {
                                                        this.state = 175;
                                                        this.match(flashcardParser.S);
                                                    }
                                                }
                                                this.state = 180;
                                                this._errHandler.sync(this);
                                                _la = this._input.LA(1);
                                            }
                                            this.state = 181;
                                            this.match(flashcardParser.NL);
                                        }
                                    }
                                }
                                this.state = 186;
                                this._errHandler.sync(this);
                                _alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
                            }
                        }
                    }
                    this.state = 189;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << flashcardParser.BitFlash1) | (1 << flashcardParser.BitFlash) | (1 << flashcardParser.BitFlashcardset) | (1 << flashcardParser.BitFlashcardlangset) | (1 << flashcardParser.BitFlashcardlang1) | (1 << flashcardParser.BitVocabulary) | (1 << flashcardParser.BitVocabulary_1))) !== 0));
                this.state = 194;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === flashcardParser.NL) {
                    {
                        {
                            this.state = 191;
                            this.match(flashcardParser.NL);
                        }
                    }
                    this.state = 196;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 197;
                this.match(flashcardParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    bitmark_() {
        let _localctx = new Bitmark_Context(this._ctx, this.state);
        this.enterRule(_localctx, 2, flashcardParser.RULE_bitmark_);
        try {
            this.state = 202;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case flashcardParser.BitFlash1:
                case flashcardParser.BitFlash:
                case flashcardParser.BitFlashcardset:
                case flashcardParser.BitFlashcardlangset:
                case flashcardParser.BitFlashcardlang1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 199;
                        this.flashcards();
                    }
                    break;
                case flashcardParser.BitVocabulary:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 200;
                        this.vocab();
                    }
                    break;
                case flashcardParser.BitVocabulary_1:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 201;
                        this.vocab_1();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    flashcards() {
        let _localctx = new FlashcardsContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, flashcardParser.RULE_flashcards);
        try {
            this.state = 209;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case flashcardParser.BitFlash:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 204;
                        this.flashcard();
                    }
                    break;
                case flashcardParser.BitFlash1:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 205;
                        this.flashcard_1();
                    }
                    break;
                case flashcardParser.BitFlashcardset:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 206;
                        this.flashcard_set();
                    }
                    break;
                case flashcardParser.BitFlashcardlangset:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 207;
                        this.flashcard_language_set();
                    }
                    break;
                case flashcardParser.BitFlashcardlang1:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 208;
                        this.flashcard_language_1();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    flashcard_1() {
        let _localctx = new Flashcard_1Context(this._ctx, this.state);
        this.enterRule(_localctx, 6, flashcardParser.RULE_flashcard_1);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 211;
                this.match(flashcardParser.BitFlash1);
                this.state = 212;
                this.format();
                this.state = 213;
                this.match(flashcardParser.CL);
                this.state = 214;
                this.match(flashcardParser.NL);
                this.state = 215;
                this.side();
                this.state = 216;
                _la = this._input.LA(1);
                if (!(_la === flashcardParser.EQ || _la === flashcardParser.EQ2)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 217;
                this.side();
                this.state = 221;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 218;
                                this.match(flashcardParser.NL);
                            }
                        }
                    }
                    this.state = 223;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
                }
                this.state = 237;
                this._errHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this._input, 9, this._ctx)) {
                    case 1:
                        {
                            this.state = 224;
                            this.resource();
                            this.state = 234;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
                            while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                                if (_alt === 1) {
                                    {
                                        {
                                            this.state = 228;
                                            this._errHandler.sync(this);
                                            _la = this._input.LA(1);
                                            while (_la === flashcardParser.NL) {
                                                {
                                                    {
                                                        this.state = 225;
                                                        this.match(flashcardParser.NL);
                                                    }
                                                }
                                                this.state = 230;
                                                this._errHandler.sync(this);
                                                _la = this._input.LA(1);
                                            }
                                            this.state = 231;
                                            this.resource();
                                        }
                                    }
                                }
                                this.state = 236;
                                this._errHandler.sync(this);
                                _alt = this.interpreter.adaptivePredict(this._input, 8, this._ctx);
                            }
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    flashcard() {
        let _localctx = new FlashcardContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, flashcardParser.RULE_flashcard);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 239;
                this.match(flashcardParser.BitFlash);
                this.state = 240;
                this.format();
                this.state = 241;
                this.match(flashcardParser.CL);
                this.state = 245;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === flashcardParser.NL) {
                    {
                        {
                            this.state = 242;
                            this.match(flashcardParser.NL);
                        }
                    }
                    this.state = 247;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 248;
                _la = this._input.LA(1);
                if (!(_la === flashcardParser.HSPL || _la === flashcardParser.HSPL2)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 249;
                this.side();
                this.state = 250;
                _la = this._input.LA(1);
                if (!(_la === flashcardParser.EQ || _la === flashcardParser.EQ2)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 251;
                this.side();
                this.state = 259;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 252;
                                _la = this._input.LA(1);
                                if (!(_la === flashcardParser.HSPL || _la === flashcardParser.HSPL2)) {
                                    this._errHandler.recoverInline(this);
                                }
                                else {
                                    if (this._input.LA(1) === Token_1.Token.EOF) {
                                        this.matchedEOF = true;
                                    }
                                    this._errHandler.reportMatch(this);
                                    this.consume();
                                }
                                this.state = 253;
                                this.side();
                                this.state = 254;
                                _la = this._input.LA(1);
                                if (!(_la === flashcardParser.EQ || _la === flashcardParser.EQ2)) {
                                    this._errHandler.recoverInline(this);
                                }
                                else {
                                    if (this._input.LA(1) === Token_1.Token.EOF) {
                                        this.matchedEOF = true;
                                    }
                                    this._errHandler.reportMatch(this);
                                    this.consume();
                                }
                                this.state = 255;
                                this.side();
                            }
                        }
                    }
                    this.state = 261;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
                }
                this.state = 262;
                _la = this._input.LA(1);
                if (!(_la === flashcardParser.HSPL || _la === flashcardParser.HSPL2)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 266;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 263;
                                this.match(flashcardParser.NL);
                            }
                        }
                    }
                    this.state = 268;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
                }
                this.state = 282;
                this._errHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this._input, 15, this._ctx)) {
                    case 1:
                        {
                            this.state = 269;
                            this.resource();
                            this.state = 279;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
                            while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                                if (_alt === 1) {
                                    {
                                        {
                                            this.state = 273;
                                            this._errHandler.sync(this);
                                            _la = this._input.LA(1);
                                            while (_la === flashcardParser.NL) {
                                                {
                                                    {
                                                        this.state = 270;
                                                        this.match(flashcardParser.NL);
                                                    }
                                                }
                                                this.state = 275;
                                                this._errHandler.sync(this);
                                                _la = this._input.LA(1);
                                            }
                                            this.state = 276;
                                            this.resource();
                                        }
                                    }
                                }
                                this.state = 281;
                                this._errHandler.sync(this);
                                _alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
                            }
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    flashcard_set() {
        let _localctx = new Flashcard_setContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, flashcardParser.RULE_flashcard_set);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 284;
                this.match(flashcardParser.BitFlashcardset);
                this.state = 285;
                this.format();
                this.state = 286;
                this.match(flashcardParser.CL);
                this.state = 290;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === flashcardParser.NL) {
                    {
                        {
                            this.state = 287;
                            this.match(flashcardParser.NL);
                        }
                    }
                    this.state = 292;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 298;
                this._errHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this._input, 17, this._ctx)) {
                    case 1:
                        {
                            this.state = 293;
                            _la = this._input.LA(1);
                            if (!(_la === flashcardParser.HSPL || _la === flashcardParser.HSPL2)) {
                                this._errHandler.recoverInline(this);
                            }
                            else {
                                if (this._input.LA(1) === Token_1.Token.EOF) {
                                    this.matchedEOF = true;
                                }
                                this._errHandler.reportMatch(this);
                                this.consume();
                            }
                            this.state = 294;
                            this.side();
                            this.state = 295;
                            _la = this._input.LA(1);
                            if (!(_la === flashcardParser.EQ || _la === flashcardParser.EQ2)) {
                                this._errHandler.recoverInline(this);
                            }
                            else {
                                if (this._input.LA(1) === Token_1.Token.EOF) {
                                    this.matchedEOF = true;
                                }
                                this._errHandler.reportMatch(this);
                                this.consume();
                            }
                            this.state = 296;
                            this.side();
                        }
                        break;
                }
                this.state = 314;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 19, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 300;
                                _la = this._input.LA(1);
                                if (!(_la === flashcardParser.HSPL || _la === flashcardParser.HSPL2)) {
                                    this._errHandler.recoverInline(this);
                                }
                                else {
                                    if (this._input.LA(1) === Token_1.Token.EOF) {
                                        this.matchedEOF = true;
                                    }
                                    this._errHandler.reportMatch(this);
                                    this.consume();
                                }
                                this.state = 301;
                                this.side();
                                this.state = 302;
                                _la = this._input.LA(1);
                                if (!(_la === flashcardParser.EQ || _la === flashcardParser.EQ2)) {
                                    this._errHandler.recoverInline(this);
                                }
                                else {
                                    if (this._input.LA(1) === Token_1.Token.EOF) {
                                        this.matchedEOF = true;
                                    }
                                    this._errHandler.reportMatch(this);
                                    this.consume();
                                }
                                this.state = 303;
                                this.side();
                                this.state = 309;
                                this._errHandler.sync(this);
                                _la = this._input.LA(1);
                                while (_la === flashcardParser.NL) {
                                    {
                                        {
                                            this.state = 304;
                                            this.match(flashcardParser.NL);
                                            this.state = 305;
                                            this.match(flashcardParser.OR);
                                            this.state = 306;
                                            this.side();
                                        }
                                    }
                                    this.state = 311;
                                    this._errHandler.sync(this);
                                    _la = this._input.LA(1);
                                }
                            }
                        }
                    }
                    this.state = 316;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 19, this._ctx);
                }
                this.state = 317;
                _la = this._input.LA(1);
                if (!(_la === flashcardParser.HSPL || _la === flashcardParser.HSPL2)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 321;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 20, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 318;
                                this.match(flashcardParser.NL);
                            }
                        }
                    }
                    this.state = 323;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 20, this._ctx);
                }
                this.state = 337;
                this._errHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this._input, 23, this._ctx)) {
                    case 1:
                        {
                            this.state = 324;
                            this.resource();
                            this.state = 334;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 22, this._ctx);
                            while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                                if (_alt === 1) {
                                    {
                                        {
                                            this.state = 328;
                                            this._errHandler.sync(this);
                                            _la = this._input.LA(1);
                                            while (_la === flashcardParser.NL) {
                                                {
                                                    {
                                                        this.state = 325;
                                                        this.match(flashcardParser.NL);
                                                    }
                                                }
                                                this.state = 330;
                                                this._errHandler.sync(this);
                                                _la = this._input.LA(1);
                                            }
                                            this.state = 331;
                                            this.resource();
                                        }
                                    }
                                }
                                this.state = 336;
                                this._errHandler.sync(this);
